# storage/api-docs/api-docs.json
@@ -98,33 +98,35 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Success",
+                        "description": "Lista de productos con paginación",
                         "content": {
                             "application/json": {
                                 "schema": {
                                     "properties": {
-                                        "testItems": {
+                                        "meta": {
+                                            "type": "object",
+                                            "example": [
+                                                {
+                                                    "page": 1,
+                                                    "totalPages": 5,
+                                                    "records": 50
+                                                }
+                                            ]
+                                        },
+                                        "data": {
                                             "type": "array",
                                             "items": {
                                                 "properties": {
-                                                    "firstName": {
+                                                    "type": {
                                                         "type": "string",
                                                         "example": ""
                                                     },
-                                                    "lastName": {
+                                                    "id": {
                                                         "type": "string",
                                                         "example": ""
                                                     },
-                                                    "companyId": {
+                                                    "attributes": {
                                                         "type": "string",
-                                                        "example": ""
-                                                    },
-                                                    "accountNumber": {
-                                                        "type": "number",
-                                                        "example": ""
-                                                    },
-                                                    "netPay": {
-                                                        "type": "money",
                                                         "example": ""
                                                     }
                                                 },
@@ -132,18 +134,36 @@
                                             },
                                             "example": [
                                                 {
-                                                    "firstName": "Bob",
-                                                    "lastName": "Fanger",
-                                                    "company": "Triple",
-                                                    "id": "808"
-                                                },
-                                                {
-                                                    "firstName": "",
-                                                    "lastName": "",
-                                                    "company": "",
-                                                    "id": ""
+                                                    "type": "articles",
+                                                    "id": "1",
+                                                    "attributtes": {
+                                                        "sku": "12546362",
+                                                        "name": "Producto 1",
+                                                        "quantity": 10,
+                                                        "price": 22.5,
+                                                        "remark": "",
+                                                        "url_image": ""
+                                                    }
                                                 }
                                             ]
+                                        },
+                                        "links": {
+                                            "type": "object",
+                                            "example": [
+                                                {
+                                                    "first": "http://laravel-api-rest-nmtpm.ondigitalocean.app/api/articles?page[number]=1&page[size]=5",
+                                                    "last": "http://laravel-api-rest-nmtpm.ondigitalocean.app/api/articles?page[number]=6&page[size]=5",
+                                                    "next": "http://laravel-api-rest-nmtpm.ondigitalocean.app/api/articles?page[number]=$2&page[size]=5",
+                                                    "prev": "http://laravel-api-rest-nmtpm.ondigitalocean.app/api/articles?page[number]=1&page[size]=5",
+                                                    "self": "http://laravel-api-rest-nmtpm.ondigitalocean.app/api/articles?page[number]=1&page[size]=5"
+                                                }
+                                            ]
+                                        },
+                                        "jsonapi": {
+                                            "type": "object",
+                                            "example": {
+                                                "version": "1.0"
+                                            }
                                         }
                                     },
                                     "type": "object"
@@ -1754,14 +1774,71 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Success",
+                        "description": "Lista de usuarios con paginación",
                         "content": {
                             "application/json": {
                                 "schema": {
                                     "properties": {
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Sorry, wrong email address or password. Please try again"
+                                        "meta": {
+                                            "type": "object",
+                                            "example": [
+                                                {
+                                                    "page": 1,
+                                                    "totalPages": 5,
+                                                    "records": 50
+                                                }
+                                            ]
+                                        },
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "type": {
+                                                        "type": "string",
+                                                        "example": ""
+                                                    },
+                                                    "id": {
+                                                        "type": "string",
+                                                        "example": ""
+                                                    },
+                                                    "attributes": {
+                                                        "type": "string",
+                                                        "example": ""
+                                                    }
+                                                },
+                                                "type": "object"
+                                            },
+                                            "example": [
+                                                {
+                                                    "type": "users",
+                                                    "id": "1",
+                                                    "attributtes": {
+                                                        "name": "Alvaro Garcia",
+                                                        "username": "alvarogarcia1010",
+                                                        "email": "alvarogarcia1010@gmail.com",
+                                                        "phone_number": "7777-7777",
+                                                        "birth_date": "1998-09-10"
+                                                    }
+                                                }
+                                            ]
+                                        },
+                                        "links": {
+                                            "type": "object",
+                                            "example": [
+                                                {
+                                                    "first": "http://laravel-api-rest-nmtpm.ondigitalocean.app/api/users?page[number]=1&page[size]=5",
+                                                    "last": "http://laravel-api-rest-nmtpm.ondigitalocean.app/api/users?page[number]=6&page[size]=5",
+                                                    "next": "http://laravel-api-rest-nmtpm.ondigitalocean.app/api/users?page[number]=$2&page[size]=5",
+                                                    "prev": "http://laravel-api-rest-nmtpm.ondigitalocean.app/api/users?page[number]=1&page[size]=5",
+                                                    "self": "http://laravel-api-rest-nmtpm.ondigitalocean.app/api/users?page[number]=1&page[size]=5"
+                                                }
+                                            ]
+                                        },
+                                        "jsonapi": {
+                                            "type": "object",
+                                            "example": {
+                                                "version": "1.0"
+                                            }
                                         }
                                     },
                                     "type": "object"
